syntax = "proto3";

package linux.srv6;

option go_package = "go.pantheon.tech/stonework/proto/linux/srv6;linux_srv6";

message LocalSID {

  string sid = 1;

  string device = 2;

  oneof end_function {
    End base_end_function = 3;
    EndX end_function_x = 4;
    EndT end_function_t = 5;
    EndDX2 end_function_dx2 = 6;
    EndDX4 end_function_dx4 = 7;
    EndDX6 end_function_dx6 = 8;
    EndDT4 end_function_dt4 = 9;
    EndDT6 end_function_dt6 = 10;
    EndB6 end_function_b6 = 11;
    EndB6Encaps end_function_b6_encaps = 12;
  }

  message End {

  }

  message EndX {
    string next_hop = 1;
  }

  message EndT {
    uint32 vrf_id = 1;
  }

  message EndDX2 {
    string outgoing_interface = 1;
  }

  message EndDX4 {
    string next_hop = 1;
  }

  message EndDX6 {
    string next_hop = 1;
  }

  message EndDT4 {
    uint32 vrf_id = 1;
  }

  message EndDT6 {
    uint32 vrf_id = 1;
  }

  message EndB6 {
    repeated string segments = 1;
    string keyId = 2;
  }

  message EndB6Encaps {
    repeated string segments = 1;
    string keyId = 2;
  }
}

message Policy {

  string prefix = 1;

  string encapMode = 2;

  repeated string segments = 3;

  string keyId = 4;

  string device = 5;
}

message BlackHoleRoute {

  string type = 1;

  uint32 table_id = 2;
}

message PolicyRule {

  string prefix = 1;

  uint32 table_id = 2;
}

message SRv6Global {

  string type = 1;

  string address = 2;

  string key_id = 3;

  string algorithm = 4;
}